# soundcalc

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  results.md
math/: fri.tex  macro.tex  main.tex  prelim.tex  whir.tex
math_companion/: hypercube.tex  lookup.tex  main.tex  prelim.tex  references.bib  swirl.tex  whir.tex
reports/: airbender.md  dummywhir.md  miden.md  openvm.md  openvm2.md  pico.md  report.md  risc0.md  sp1.md  summary.md  venus.md  zisk.md  zkdtvm.md
soundcalc/: __main__.py  main.py  report.py  report_cli.py  report_md.py  schemas.py
soundcalc/circuits/: __init__.py  circuit.py  deep_ali.py  jagged.py
soundcalc/circuits/swirl/: __init__.py  calculator.py  circuit.py
soundcalc/common/: fields.py  fri.py  utils.py
soundcalc/custom/: __init__.py
soundcalc/custom/swirl/: __init__.py  calculator.py  circuit.py
soundcalc/lookups/: gkr.py  logup.py
soundcalc/pcs/: fri.py  jagged.py  pcs.py  whir.py
soundcalc/proxgaps/: johnson_bound.py  proxgaps_regime.py  unique_decoding.py
soundcalc/regimes/: capacity_bound.py  fri_regime.py  johnson_bound.py  unique_decoding.py
soundcalc/zkevms/: miden.py  pico.py  risc0.py  zkevm.py
soundcalc/zkvms/: best_attack.py  circuit.py  fri_based_vm.py  lookups.py  miden.py  risc0.py  whir_based_vm.py  zisk.py  zisk.yml  zkvm.py
soundcalc/zkvms/airbender/: __init__.py  airbender.toml
soundcalc/zkvms/dummy_whir/: __init__.py  dummy_whir.json  dummy_whir.toml
soundcalc/zkvms/miden/: __init__.py  miden.json  (+1 more)
tests/: test_circuit.py  test_fri.py  test_grinding.py  test_whir.py
(+19 files in other folders)
