[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcalc"
version = "0.0.0"
description = "Universal zkEVM security bits calculator"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["."]



